Fix spacing issues for H2 and anchors

--- a/assets/css/mgo.scss
+++ b/assets/css/mgo.scss
@@ -39,6 +39,13 @@ body {
   }
 }
 
+h2 {
+  line-height: 1em;
+  .anchor {
+    margin-top: 0;
+  }
+}
+
 .topbar-breadcrumbs {
   font-size: 1rem;
 }
